@@ -58,5 +58,3 @@ ftp=org.apache.tools.ant.taskdefs.optional.FTP
 
 # deprecated ant tasks (kept for back compatibility)
 javadoc2=org.apache.tools.ant.taskdefs.Javadoc
-keysubst=org.apache.tools.ant.taskdefs.KeySubst
-expand=org.apache.tools.ant.taskdefs.Expand
