@@ -6,6 +6,8 @@ Changes that could break older environments:
 * copying of support files in <javac> has been removed - as well as
 the filtering attribute.
 
+* the <expand> and <keysubst> tasks have been removed.
+
 * the command line switches _not_ starting with - have been removed.
 
 * Path and EnumeratedAttribute have been moved from
